--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+make_build/
+*.tar.gz
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -155,7 +157,8 @@ cython_debug/
 # PyCharm
 .idea/
 
-*tar.gz
 pp_cmd/
 storage/
 otl_v1_config.ini
+config.ini
+conda/
